--- a/demo/index.html
+++ b/demo/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name='description' content=''>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='icon' type='image/x-icon' href='/favicon.ico'>
-    <link href="style-22cc0e655f596cbd750c.css" rel="stylesheet"></head>
+        <link rel='icon' type='image/x-icon' href='<%= htmlWebpackPlugin.options.faviconUrl %>'>
+    </head>
     <body>
         <div id='react-root'></div>
-    <script type="text/javascript" src="vendor-22cc0e655f596cbd750c.js"></script><script type="text/javascript" src="main-22cc0e655f596cbd750c.js"></script></body>
+    </body>
 </html>
